test/spec_vectors/loop/fail/module_12.wat
(module (type $sig (func)) (func (loop (type $sig) (i32.const 0))))